# agent-control

./: AGENTS.md  CHANGELOG.md  CONCEPTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  SETUP.md  UV_QUICK_REFERENCE.md  UV_SETUP_GUIDE.md  WORKSPACE_MIGRATION.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.sh
.githooks/: pre-push
engine/: README.md  pyproject.toml
engine/src/agent_control_engine/: __init__.py  core.py  discovery.py  evaluators.py  selectors.py
engine/tests/: conftest.py  test_core.py  test_discovery.py  test_evaluator_integrations.py  test_evaluators.py  test_plugin_evaluators.py  test_selectors.py
evaluators/: README.md  pyproject.toml
evaluators/builtin/: pyproject.toml
evaluators/builtin/tests/list/: test_list.py
evaluators/contrib/galileo/: Makefile  README.md  pyproject.toml
evaluators/contrib/galileo/tests/: test_luna2_evaluator.py
evaluators/contrib/template/: README.md  pyproject.toml.template
evaluators/extra/galileo/: pyproject.toml
evaluators/src/agent_control_evaluators/: __init__.py
evaluators/src/agent_control_evaluators/builtin/: __init__.py  json.py  list.py  regex.py  sql.py
evaluators/src/agent_control_evaluators/luna2/: __init__.py  client.py  config.py  evaluator.py
evaluators/tests/: __init__.py  test_base.py  test_json.py  test_sql.py
examples/crewai/content_publishing_flow/: README.md  pyproject.toml  setup_controls.py
examples/crewai/evaluator_showcase/: README.md  pyproject.toml  setup_controls.py
examples/crewai/secure_research_crew/: .env.example  README.md  pyproject.toml  setup_controls.py
examples/crewai/steering_financial_agent/: README.md  pyproject.toml  setup_controls.py
examples/galileo/: README.md  luna2_demo.py  pyproject.toml
examples/google_adk_callbacks/: README.md  pyproject.toml  setup_controls.py
examples/google_adk_callbacks/my_agent/: __init__.py  agent.py
examples/langgraph/my_agent/: .gitignore  CHANGES_SUMMARY.md  DECORATOR_EXPLAINED.md  HOW_DATA_FLOWS.md  INIT_PROTECT_GUIDE.md  QUICK_START.md  README.md  README_INIT_PROTECT.md  RULES_GUIDE.md  RULES_QUICK_REF.md  __init__.py  agent.py  agent_with_rules.py  cli.py  decorator_example.py  env.example  example_with_agent_protect.py  langgraph.json  protect_engine.py  pyproject.toml  rules.yaml  simple_example.py  sql_agent_protection.py  test_agent.py  test_protect_engine.py  visualize_graph.py
examples/steer_action_demo/: README.md  autonomous_agent_demo.py  pyproject.toml  setup_controls.py
examples/strands_agents/: .env.example  README.md  pyproject.toml
examples/strands_agents/interactive_demo/: interactive_support_demo.py  setup_interactive_controls.py
examples/strands_agents/steering_demo/: README.md  email_safety_demo.py  setup_email_controls.py
models/: README.md  pyproject.toml
models/src/agent_control_models/: __init__.py  actions.py  agent.py  controls.py  errors.py  evaluation.py  evaluator.py  observability.py  plugin.py  policy.py  server.py
models/src/agent_protect_models/: __init__.py  base.py  health.py  protection.py
models/tests/: test_actions.py  test_control_templates.py
plugins/: pyproject.toml
plugins/src/agent_control_plugins/: __init__.py  base.py
plugins/tests/: test_base.py
sdks/python/: ARCHITECTURE.md  Makefile  README.md  REFACTORING_SUMMARY.md  pyproject.toml  pytest.ini
sdks/python/scripts/: reset_test_db.py
sdks/python/tests/: QUICK_START.md  README.md  __init__.py  conftest.py  test_agent_id_validation.py  test_agents_api.py  test_control_decorators.py  test_controls_api.py  test_evaluation.py  test_evaluators.py  test_init_conflict.py  test_init_step_merge.py  test_init_validation.py  test_integration_agents.py  test_integration_control_sets.py  test_integration_controls.py  test_integration_health.py  test_integration_policies.py  test_integrations_core.py  test_local_evaluation.py  test_luna2_evaluator.py  test_luna2_plugin.py  test_observability.py  test_observability_updates.py  test_plugins.py  test_policy_refresh_loop.py  test_shutdown.py  test_strands_hook.py  test_strands_init.py  test_strands_plugin.py  test_strands_steering.py  test_trace_context.py  test_tracing.py  test_validation.py
server/: .env.example  Dockerfile  Makefile  README.md  debug_config.py  docker-compose.yml  init_db.py  openapi.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 58920e6807fe_name_native_agent_identity_hard_cut.py  5f2b5f4e1a90_collapse_advisory_actions_to_observe.py  8b23d645f86d_drop_evaluator_config_store.py  9f2c5f7a722f_initial.py  c8d9e0f1a2b3_rename_plugin_to_evaluator.py  d2f4a6b8c9d0_rename_evaluator_plugin_column.py
server/src/agent_control_server/: __init__.py  auth.py  config.py  db.py  errors.py  logging_utils.py  main.py  models.py
server/src/agent_protect_server/: main.py
server/tests/: conftest.py  test_agents_additional.py  test_auth.py  test_config.py  test_control_action_alembic_migration.py  test_control_compatibility.py  test_control_sets.py  test_control_templates.py  test_controls.py  test_controls_additional.py  test_controls_validation.py  test_error_handling.py  test_errors_handlers.py  test_evaluation_e2e.py  test_evaluation_e2e_list_evaluator.py  test_evaluation_e2e_sql_evaluator.py  test_evaluation_error_handling.py  test_evaluator_configs.py  test_evaluator_schemas.py  test_evaluator_utils.py  test_init_agent.py  test_init_agent_conflict_mode.py  test_init_agent_force_replace.py  test_logging_utils.py  test_metrics.py  test_new_features.py  test_observability_direct_ingest.py  test_observability_endpoints.py  test_observability_models.py  test_observability_store_memory.py  test_observability_store_postgres.py  test_policies.py  test_policy_integration.py  test_rules_validation.py  test_services_controls.py  utils.py
server/unit_tests/: test_endpoint_helpers.py
telemetry/: Makefile  README.md  pyproject.toml
telemetry/src/agent_control_telemetry/: __init__.py  sinks.py  trace_context.py
telemetry/tests/: test_sinks.py  test_trace_context.py
(+336 files in other folders)
