[project]
name = "agent-control-evaluators"
version = "0.1.0"
description = "Evaluator implementations for agent-control"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Galileo", email = "support@rungalileo.io" }]
dependencies = [
    "agent-control-models",
    "pydantic>=2.0.0",
    "google-re2>=1.1",
    "jsonschema>=4.0.0",
    "sqlglot[rs]>=20.0.0",
]

[project.optional-dependencies]
luna2 = ["httpx>=0.24.0"]
all = ["httpx>=0.24.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.entry-points."agent_control.evaluators"]
regex = "agent_control_evaluators.builtin.regex:RegexEvaluator"
list = "agent_control_evaluators.builtin.list:ListEvaluator"
json = "agent_control_evaluators.builtin.json:JSONEvaluator"
sql = "agent_control_evaluators.builtin.sql:SQLEvaluator"
luna2 = "agent_control_evaluators.luna2.evaluator:Luna2Evaluator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control_evaluators"]

[tool.uv.sources]
agent-control-models = { workspace = true }
