[project]
name = "agent-protect-models"
version = "0.1.0"
description = "Shared data models for Agent Protect server and SDK"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
]
authors = [
    {name = "Agent Protect Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_protect_models"]

