[project]
name = "agent-control-models"
version = "6.0.0"
description = "Shared data models for Agent Control server and SDK"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.4",
    "jsonschema>=4.0.0",
]
authors = [
    {name = "Agent Control Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control_models"]
