[project]
name = "agent-control-server"
version = "0.1.0"
description = "Server for Agent Control"
requires-python = ">=3.12"
dependencies = [
    "agent-control-models>=0.1.0",
    "agent-control-engine>=0.1.0",
    "agent-control-plugins>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.1",
    "greenlet>=3.0",
    "alembic>=1.13.0",
    "jsonschema>=4.25.1",
    "jsonschema-rs>=0.22.0",
]
authors = [
    {name = "Agent Protect Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
luna2 = [
    "galileo>=1.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-jsonschema>=4.23.0",
]

[project.scripts]
agent-control-server = "agent_control_server.main:run"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agent_control_server"]
