[project]
name = "agent-control-server"
version = "6.3.0"
description = "Server for Agent Control - manage and evaluate controls for AI agents"
requires-python = ">=3.12"
# Note: agent-control-models and agent-control-engine are bundled at build time
# Note: agent-control-evaluators is a runtime dependency (NOT vendored) to avoid
#       duplicate module conflict when galileo extras are installed
dependencies = [
    "fastapi>=0.109.0",
    "starlette-exporter>=0.23.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29.0",
    "greenlet>=3.0",
    "alembic>=1.13.0",
    "jsonschema>=4.25.1",
    "jsonschema-rs>=0.22.0",
    "google-re2>=1.1",  # For engine (bundled)
    "agent-control-evaluators>=3.0.0",  # NOT vendored - avoid conflict with galileo
]
authors = [
    {name = "Agent Control Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
galileo = ["agent-control-evaluator-galileo>=3.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-jsonschema>=4.23.0",
    "agent-control-models",
    "agent-control-engine",
    "agent-control-evaluators",
]

[project.scripts]
agent-control-server = "agent_control_server.main:run"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Note: agent_control_models and agent_control_engine are copied by scripts/build.py
# Note: agent_control_evaluators is a runtime dep, not vendored
packages = ["src/agent_control_server", "src/agent_control_models", "src/agent_control_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agent_control_server"]

# For local development, use workspace packages
[tool.uv.sources]
agent-control-models = { workspace = true }
agent-control-engine = { workspace = true }
agent-control-evaluators = { workspace = true }
# For local dev: use local galileo package instead of PyPI
agent-control-evaluator-galileo = { path = "../evaluators/contrib/galileo", editable = true }
