[project]
name = "agent-control-telemetry"
version = "7.3.2"
description = "Shared telemetry contracts for Agent Control"
requires-python = ">=3.12"
dependencies = [
    "agent-control-models>=3.0.0",
]
authors = [
    {name = "Agent Control Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "agent-control-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control_telemetry"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_control_telemetry/py.typed" = "agent_control_telemetry/py.typed"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agent_control_telemetry"]

[tool.uv.sources]
agent-control-models = { workspace = true }
