[project]
name = "agent-control-galileo-example"
version = "0.1.0"
description = "Agent Control Luna-2 Galileo Protect Integration Example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-control-evaluators[luna2]",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

