[project]
name = "agent-control-sdk"
version = "2.0.1"
description = "Python SDK for Agent Control - protect your AI agents with controls"
requires-python = ">=3.12"
# Note: agent-control-models and agent-control-engine are bundled at build time
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",  # For typed configuration via environment variables
    "docstring-parser>=0.15",  # For @tool decorator schema inference
    "google-re2>=1.1",  # For engine (bundled)
    "jsonschema>=4.0.0",  # For models/engine (bundled)
]
authors = [
    {name = "Agent Control Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["agent", "protection", "security", "sdk", "llm", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-control"
Documentation = "https://github.com/yourusername/agent-control#readme"
Repository = "https://github.com/yourusername/agent-control"

[project.optional-dependencies]
# Optional: Luna-2 plugin requires additional dependencies
luna2 = [
    "httpx>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "agent-control-models",
    "agent-control-engine",
    "agent-control-plugins",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Note: agent_control_models and agent_control_engine are copied by scripts/build.py
packages = ["src/agent_control", "src/agent_control_models", "src/agent_control_engine"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agent_control"]

# For local development, use workspace packages
[tool.uv.sources]
agent-control-models = { workspace = true }
agent-control-engine = { workspace = true }
agent-control-plugins = { workspace = true }
