[project]
name = "agent-control-sdk"
version = "6.3.0"
description = "Python SDK for Agent Control - protect your AI agents with controls"
requires-python = ">=3.12"
# Note: agent-control-models and agent-control-engine are bundled at build time
# Note: agent-control-evaluators is a runtime dependency (NOT vendored) to avoid
#       duplicate module conflict when galileo extras are installed
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",  # For typed configuration via environment variables
    "docstring-parser>=0.15",  # For @tool decorator schema inference
    "google-re2>=1.1",  # For engine (bundled)
    "jsonschema>=4.0.0",  # For models/engine (bundled)
    "agent-control-evaluators>=3.0.0",  # NOT vendored - avoid conflict with galileo
]
authors = [
    {name = "Agent Control Team"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["agent", "protection", "security", "sdk", "llm", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-control"
Documentation = "https://github.com/yourusername/agent-control#readme"
Repository = "https://github.com/yourusername/agent-control"

[project.optional-dependencies]
galileo = ["agent-control-evaluator-galileo>=3.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "agent-control-models",
    "agent-control-engine",
    "agent-control-evaluators",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Note: agent_control_models and agent_control_engine are copied by scripts/build.py
packages = ["src/agent_control", "src/agent_control_models", "src/agent_control_engine"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agent_control"]

# For local development, use workspace packages
[tool.uv.sources]
agent-control-models = { workspace = true }
agent-control-engine = { workspace = true }
agent-control-evaluators = { workspace = true }
# For local dev: use local galileo package instead of PyPI
agent-control-evaluator-galileo = { path = "../../evaluators/contrib/galileo", editable = true }
