[project]
name = "content-publishing-flow"
version = "0.1.0"
description = "CrewAI Flow with routing, embedded crews, and Agent Control guardrails"
requires-python = ">=3.12"
dependencies = [
    "agent-control-sdk>=6.3.0",
    "crewai[tools]>=1.10.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sqlglot[c]>=29.0.0,<29.1.0",
    "sqlglotc>=29.0.0,<29.1.0",
]

[project.scripts]
content_publishing_flow = "content_publishing_flow.main:run"
kickoff = "content_publishing_flow.main:kickoff"
plot = "content_publishing_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_publishing_flow"]

[tool.crewai]
type = "flow"
