[project]
name = "secure-research-crew"
version = "0.1.0"
description = "CrewAI multi-agent research crew with per-agent policies via Agent Control"
requires-python = ">=3.12"
dependencies = [
    "agent-control-sdk>=6.3.0",
    "crewai[tools]>=1.10.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sqlglot[c]>=29.0.0,<29.1.0",
    "sqlglotc>=29.0.0,<29.1.0",
]

[project.scripts]
secure_research_crew = "secure_research_crew.main:run"
run_crew = "secure_research_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secure_research_crew"]

[tool.crewai]
type = "crew"
