[project]
name = "steering-financial-agent"
version = "0.1.0"
description = "CrewAI financial agent with steering, deny, and warn actions via Agent Control"
requires-python = ">=3.12"
dependencies = [
    "agent-control-sdk>=6.3.0",
    "crewai[tools]>=1.10.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sqlglot[c]>=29.0.0,<29.1.0",
    "sqlglotc>=29.0.0,<29.1.0",
]

[project.scripts]
steering_financial_agent = "steering_financial_agent.main:run"
run_crew = "steering_financial_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steering_financial_agent"]

[tool.crewai]
type = "crew"
