[project]
name = "agent-protect-langgraph-example"
version = "0.1.0"
description = "LangGraph agent example integrated with Agent Control"
requires-python = ">=3.12"
dependencies = [
    "agent-control-engine",
    "agent-control-models",
    "agent-control-plugins",
    "agent-control-sdk",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "env.example",
    "langgraph.json",
    "rules.yaml",
    "static/**",
]

[tool.uv.sources]
agent-control-sdk = { path = "../../../sdks/python", editable = true }
agent-control-models = { path = "../../../models", editable = true }
agent-control-engine = { path = "../../../engine", editable = true }
agent-control-plugins = { path = "../../../plugins", editable = true }

